# microfarm.websockets

./: pyproject.toml  requirements.txt
example/: service.ws.toml
microfarm_websockets/: service.py
