[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_websockets"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "aiozmq",
    "minicli",
    "websockets",
    "msgpack"
]

[project.scripts]
mfwebsockets = "microfarm_websockets.service:run"

[tool.setuptools.packages.find]
where = ["."]
